added_update_list_items

--- a/src/components/Clicker/style.module.css
+++ b/src/components/Clicker/style.module.css
@@ -1,6 +1,7 @@
 
 .counter {
-    width: 100px;
+    margin: 0 auto;
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
