--- a/src/components/List/style.module.css
+++ b/src/components/List/style.module.css
@@ -12,15 +12,43 @@
 
 }
 
-.list_item {
+.list__item {
+    border-radius: 10px;
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
+    padding: 10px 20px;
 }
 
-.list_delete {
+.list__item--completed {
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 10px 20px;
+    background-color: rgb(73, 214, 73);
+}
+
+.list__item--overdue {
+    
+}
+
+.list__fix {
     margin: 10px;
     padding: 5px;
     background-color: red;
     color: white;
+}
+
+.list__delete {
+    margin: 10px;
+    padding: 5px;
+    background-color: red;
+    color: white;
+}
+
+.list__completed {
+    margin: 10px;
+    padding: 5px;
+    background-color: gray;
 }
