--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -11,6 +11,11 @@
     margin-bottom: 40px;
 }
 
+.header_dark {
+    background-color: black;
+
+}
+
 .logo {
     display: flex;
     flex-direction: row;
@@ -38,7 +43,15 @@
     position: relative;
 }
 
-.ul_li, .ul_li > li  {
+.navigation__list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+}
+
+.navigation__list > li  {
+    list-style: none;
     text-decoration: none;
     box-sizing: border-box;
 }
@@ -47,7 +60,7 @@
     display: block;
     box-sizing: border-box;
     text-decoration: none;
-    color: black;
+    color: var(--text);
     font-size: 14px;
     text-transform: uppercase;
     transition: all 0.3s ease-in-out;
