--- a/src/components/TaskManager/style.module.css
+++ b/src/components/TaskManager/style.module.css
@@ -10,3 +10,10 @@
     font-weight: bold;
     font-size: 20px;
 }
+
+.search {
+    padding: 10px;
+    width: 100%;
+    background-color: gray;
+    color: white;
+}
