--- a/src/components/TaskAddFrom/style.module.css
+++ b/src/components/TaskAddFrom/style.module.css
@@ -2,13 +2,13 @@
 
 .form {
     padding: 30px;
-    background-color: gray;
+    background-color: var(--bg);
     border-radius: 20px;
     align-items: center;
-    width: 300px;
+    /* width: 300px; */
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-direction: row;
+    gap: 20px;
 }
 
 .form__title {
