--- a/src/components/TaskManager/style.module.css
+++ b/src/components/TaskManager/style.module.css
@@ -12,8 +12,9 @@
 }
 
 .search {
-    padding: 10px;
-    width: 100%;
-    background-color: gray;
-    color: white;
+    padding: 20px;
+    width: 500px;
+    border-radius: 30px;
+    background-color: var(--text);
+    color: var(--bg);
 }
