--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 40px;
+    border-bottom: 2px solid gray;
 }
 
 .header_dark {
