--- a/src/components/TaskAddFrom/style.module.css
+++ b/src/components/TaskAddFrom/style.module.css
@@ -11,9 +11,9 @@
     gap: 20px;
 }
 
-.form__title {
+/* .form__title {
     font-weight: bold;
-}
+} */
 
 .form__input {
     padding: 10px 20px;
