--- a/src/components/List/style.module.css
+++ b/src/components/List/style.module.css
@@ -86,3 +86,10 @@
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+
+.btnControl {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
