--- a/src/components/List/style.module.css
+++ b/src/components/List/style.module.css
@@ -20,6 +20,10 @@
     font-weight: bold;
     font-size: 14px;
     padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
 }
 
 .list__item--completed {
@@ -41,42 +45,30 @@
 }
 
 .list__fix {
-    margin: 10px;
-    padding: 5px;
-    background-color: red;
+    padding: 3px;
+    background-color: white;
     color: white;
 }
 
 .list__delete {
-    margin: 10px;
-    padding: 5px;
-    background-color: red;
+    padding: 3px;
+    background-color: white;
     color: white;
 }
 
 .list__completed {
-    margin: 10px;
-    padding: 5px;
-    background-color: gray;
+    padding: 3px;
+    background-color: white;
 }
 
 .item__meta {
-    font-size: 0.85rem;
+    font-size: 10px;
     color: #666;
-    margin: 4px 0;
+    margin: 0;
 }
 
 .list__item {
     border: 2px solid gray;
-}
-
-.list__item--overdue {
-    background-color: #f44336;
-}
-
-.list__item--completed {
-    opacity: 0.6;
-    text-decoration: line-through;
 }
 
 .editor__input {
@@ -88,8 +80,15 @@
 }
 
 .btnControl {
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    gap: 3px;
+}
+
+.btnControlImg {
+    max-height: 15px;
+    max-width: 15px;
+    object-fit: contain;
 }
