--- a/src/components/TaskManager/style.module.css
+++ b/src/components/TaskManager/style.module.css
@@ -12,9 +12,10 @@
 }
 
 .search {
-    padding: 20px;
+    padding: 10px;
     width: 500px;
-    border-radius: 30px;
+    border-radius: 10px;
     background-color: var(--text);
     color: var(--bg);
+    border: none;
 }
