--- a/src/components/TaskAddFrom/style.module.css
+++ b/src/components/TaskAddFrom/style.module.css
@@ -2,12 +2,13 @@
 
 .form {
     padding: 10px;
-    /* border: 2px solid gray; */
+    flex-wrap: wrap;
     background-color: var(--bg);
     border-radius: 20px;
     align-items: center;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -22,5 +23,12 @@
     border-radius: 10px;
     background-color: white;
     color: black;
+}
 
+@media (max-width: 800px) {
+    .form {
+        flex-direction: column;
+        border: 2px solid gray;
+    }
+    
 }
