--- a/src/components/TaskManager/style.module.css
+++ b/src/components/TaskManager/style.module.css
@@ -14,6 +14,7 @@
 .search {
     padding: 10px;
     width: 500px;
+    max-width: 90%;
     border-radius: 10px;
     background-color: var(--text);
     color: var(--bg);
