--- a/src/components/List/style.module.css
+++ b/src/components/List/style.module.css
@@ -3,18 +3,20 @@
 .list {
     box-sizing: border-box;
     padding: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     gap: 5px;
     list-style-type: none;
-    margin: 0;
     padding: 0;
     width: 80%;
-
+    column-count: 7;
+    column-gap: 12px;
+    margin: 0 auto;
 }
 
 .list__item {
+    break-inside: avoid;
+    margin-bottom: 12px;
+
+    max-width: 200px;
     border-radius: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -24,6 +26,14 @@
     flex-direction: column;
     align-items: start;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+.list__item > span {
+    display: block;
+    max-width: 100%; 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal; 
 }
 
 .list__item--completed {
@@ -45,6 +55,8 @@
 }
 
 .list__fix {
+    width: 27px;
+    height: 27px;
     border: 2px solid gray;
     padding: 3px;
     background-color: white;
@@ -52,6 +64,8 @@
 }
 
 .list__delete {
+    width: 27px;
+    height: 27px;
     border: 2px solid gray;
     padding: 3px;
     background-color: white;
@@ -59,6 +73,8 @@
 }
 
 .list__completed {
+    width: 27px;
+    height: 27px;
     border: 2px solid gray;
     padding: 3px;
     background-color: white;
@@ -68,6 +84,12 @@
     font-size: 10px;
     color: #666;
     margin: 0;
+    text-align: start;
+    display: block;
+    max-width: 100%; 
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal; 
 }
 
 .list__item {
@@ -91,7 +113,7 @@
 }
 
 .btnControlImg {
-    max-height: 17px;
-    max-width: 17px;
-    object-fit: contain;
+    height: 19px;
+    width: 19px;
+    object-fit: cover;
 }
