--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body.dark {
 }
 
 body {
+    /*position: relative;*/
   background-color: var(--bg);
   color: var(--text);
   transition: background-color 0.3s, color 0.3s;
@@ -30,6 +31,14 @@ body {
   /* padding: 2rem; */
   text-align: center;
   min-height: 100%;
+}
+
+.containerApp {
+    /*position: relative;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .logo {
