--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
     border-bottom: 2px solid gray;
 }
 
