--- a/src/components/CalendarHeader/style.module.css
+++ b/src/components/CalendarHeader/style.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .monthAndToday {
