fix size container

--- a/src/components/CalendarContainer/style.module.css
+++ b/src/components/CalendarContainer/style.module.css
@@ -28,7 +28,7 @@
 }
 
 .containerWeek {
-    height: 600px;
+    height: 720px;
     width: calc(100% - 40px);
     margin: 0 auto;
     display: grid;
@@ -56,7 +56,7 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    background-color: #9b9b9b;
-    /*border: 2px solid white;*/
+    background-color: var(--border);
+    border: 3px solid var(--border);
     border-radius: 10px;
 }
