added btn profile and added context for calendar modificate view

--- a/src/components/CalendarContainer/style.module.css
+++ b/src/components/CalendarContainer/style.module.css
@@ -16,15 +16,11 @@
 }
 
 .weekItem {
-
+    width: 100%;
 }
 
-.weekItemTitle {
-
-}
-
-.weekItemDate {
-
+.weekItemTitle, .weekItemDate {
+    margin: 5px;
 }
 
 .containerWeek {
